crates/brasa_lexer/src/snapshots/brasa_lexer__tests__string_empty.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"\\\"\")"
---
StringStart "\""
StringEnd "\""
Eof ""
