crates/brasa_lexer/src/snapshots/brasa_lexer__tests__string_escapes.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"a\\\\nb\\\\tc\\\\\\\"d\\\\\\\\e\\\\#f\\\"\")"
---
StringStart "\""
StringText "a\\nb\\tc\\\"d\\\\e\\#f"
StringEnd "\""
Eof ""
