crates/brasa_lexer/src/snapshots/brasa_lexer__tests__string_interp_map_literal.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"#{ {\\\"a\\\": 1} }\\\"\")"
---
StringStart "\""
InterpStart "#{"
LBrace "{"
StringStart "\""
StringText "a"
StringEnd "\""
Colon ":"
Int "1"
RBrace "}"
InterpEnd "}"
StringEnd "\""
Eof ""
