crates/brasa_lexer/src/snapshots/brasa_lexer__tests__string_nested_interp.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"x#{ \\\"inner #{y}\\\" }z\\\"\")"
---
StringStart "\""
StringText "x"
InterpStart "#{"
StringStart "\""
StringText "inner "
InterpStart "#{"
Ident "y"
InterpEnd "}"
StringEnd "\""
InterpEnd "}"
StringText "z"
StringEnd "\""
Eof ""
