crates/brasa_lexer/src/snapshots/brasa_lexer__tests__string_plain.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"hello\\\"\")"
---
StringStart "\""
StringText "hello"
StringEnd "\""
Eof ""
