crates/brasa_lexer/src/snapshots/brasa_lexer__tests__type_ident.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"Vector\")"
---
TypeIdent "Vector"
Eof ""
