crates/brasa_lexer/src/snapshots/brasa_lexer__tests__unknown_char.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"a @ b\")"
---
Ident "a"
Error "@"
Ident "b"
Eof ""
--- errors ---
2..3: unexpected character `@`
