crates/brasa_lexer/src/snapshots/brasa_lexer__tests__unterminated_interp.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"a#{1 + 2\")"
---
StringStart "\""
StringText "a"
InterpStart "#{"
Int "1"
Plus "+"
Int "2"
Error ""
Eof ""
--- errors ---
9..9: unterminated interpolation
