crates/brasa_lexer/src/snapshots/brasa_lexer__tests__unterminated_string.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"\\\"abc\")"
---
StringStart "\""
StringText "abc"
Error ""
Eof ""
--- errors ---
4..4: unterminated string literal
